--- a/css/main.css
+++ b/css/main.css
@@ -40,12 +40,60 @@
     /*    border: 1px solid red*/
 }
 
-#char-j1 {
-    background-image: linear-gradient(to bottom left, #d41619, #f66e25);
+#char-j1,
+#char-j2 {
+    margin-top: 80px;
 }
 
-#char-j2 {
+/* z-index sur la grid */
+#banner-j1,
+#banner-j2 {
+    background-color: white;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    z-index: 2;
+}
+
+#banner-j1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+#banner-j2 {
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
+#div-j1,
+#div-j2 {
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+#div-j1 {
+    background-image: linear-gradient(to bottom left, #d41619, #f66e25);
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+#div-j2 {
     background-image: linear-gradient(to bottom right, #0049b9, #0086ea);
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
+#phase {
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+#phase2 {
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 4;
 }
 
 #versus {
@@ -58,6 +106,7 @@
 }
 
 #logo_haut {
+    z-index: 2;
     top: 0px;
     left: 50%;
 }
@@ -119,6 +168,3 @@
     width: 50px;
     height: 50px;
 }
-
-/*TODO select stock J1 et J2 en color*/
-/*TODO onclick, select*/
