use of classList.toggle

--- a/css/main.css
+++ b/css/main.css
@@ -168,3 +168,9 @@
     width: 50px;
     height: 50px;
 }
+
+/* reverse */
+.reverse {
+    transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+}
