--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 
 #main {
     position: relative;
+    margin-bottom: 10px;
 }
 
 #thumbnail {
@@ -24,7 +25,6 @@
     text-align: center;
     font-family: '8-bit_pusab';
     font-size: 2.75em;
-    /*    border: 1px solid lightgray;*/
     display: flex;
 }
 
@@ -83,6 +83,7 @@
 }
 
 #phase {
+    background-color: white;
     grid-row-start: 3;
     grid-row-end: 3;
     grid-column-start: 1;
@@ -90,6 +91,7 @@
 }
 
 #phase2 {
+    background-color: white;
     grid-row-start: 3;
     grid-row-end: 3;
     grid-column-start: 2;
@@ -117,7 +119,6 @@
 }
 
 .logo {
-    /*    border: 1px solid green;*/
     position: absolute;
     width: 250px;
     height: 250px;
@@ -135,26 +136,29 @@
     grid-template-columns: 100px 1fr 100px 1fr;
     grid-template-rows: auto auto auto;
     grid-gap: 10px;
+    margin: auto;
+    width: 75%;
 }
 
 /* sélections perso */
 .select-char {
     margin: 5px auto;
     display: grid;
-    grid-gap: 5px;
-    grid-template-columns: repeat(13, 35px);
-    grid-template-rows: repeat(6, 35px);
+    /*    grid-gap: 5px;*/
+    grid-template-columns: repeat(13, 45px);
+    grid-template-rows: repeat(6, 45px);
 }
 
 .stocks,
 .color-stocks,
 .reserved {
-    width: 35px;
-    height: 35px;
+    width: 100%;
+    height: 100%;
 }
 
 .stocks:hover,
-.color-stocks:hover {
+.color-stocks:hover,
+.selected {
     border: 3px outset;
 }
 
