--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@
 #infos {
     display: grid;
     grid-template-columns: 100px 1fr 100px 1fr;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto auto auto;
     grid-gap: 10px;
     margin: auto;
     width: 75%;
@@ -177,4 +177,12 @@
 .reverse {
     transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
+}
+
+/* select phase */
+#select_phase {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 4;
+    grid-row-end: 4;
 }
