--- a/css/main.css
+++ b/css/main.css
@@ -99,30 +99,60 @@
 }
 
 #versus {
+    /*
     position: relative;
     left: 51%;
     margin: auto;
     top: -424px;
     text-shadow: 0px 0px 20px white, 0px 0px 20px white, 0px 0px 20px white;
     font-size: 5em;
+*/
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    z-index: 2;
+    text-shadow: 0px 0px 20px white, 0px 0px 20px white, 0px 0px 20px white;
+    font-size: 5em;
 }
 
 #logo_haut {
+    /*
     z-index: 2;
     top: 0px;
     left: 50%;
+    text-align: center;
+*/
+    grid-row-start: 1;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    z-index: 2;
+    text-align: center;
+    margin: 0 auto auto auto;
 }
 
 #logo_bas {
+    /*
     bottom: 0px;
     left: 50%;
+    text-align: center;
+*/
+    grid-row-start: 1;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    z-index: 2;
+    margin: auto auto 0 auto;
 }
 
 .logo {
+    /*
     position: absolute;
-    width: 250px;
-    height: 250px;
-    margin-left: -125px;
+*/
+    max-width: 250px;
+    max-height: 250px;
+    /*    margin-left: -125px;*/
 }
 
 .logo > img {
@@ -185,4 +215,12 @@
     grid-column-end: 5;
     grid-row-start: 4;
     grid-row-end: 4;
+}
+
+/* select logos */
+#select_logo_bas {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 5;
+    grid-row-end: 5;
 }
