--- a/css/main.css
+++ b/css/main.css
@@ -29,12 +29,22 @@
     padding-bottom: 10px;
 }
 
+@media only screen and (max-width: 1250px) {
+    #main {
+        overflow: scroll;
+        resize: vertical;
+        height: 50%;
+    }
+
+    #infos {
+        grid-template-columns: 75px 30em 75px 30em !important;
+    }
+}
+
 #thumbnail {
     overflow: hidden;
-    border: 1px solid black;
     width: 1280px;
     height: 720px;
-    /*    margin: auto;*/
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 80px 545px 95px;
@@ -181,7 +191,7 @@
     grid-template-rows: auto auto auto auto;
     grid-gap: 15px;
     margin: auto;
-    /*    width: 85%;*/
+    overflow: scroll auto;
 }
 
 #infos > span {
@@ -198,7 +208,7 @@
 
 @media only screen and (max-width: 1280px) {
     .select-color {
-        /*        width: 50% !important;*/
+        padding: 0 5em;
         text-align: center;
     }
 }
@@ -276,6 +286,7 @@
 /* select color background */
 #form_background_color_j1,
 #form_background_color_j2 {
+    text-align: center;
     padding-top: 5px;
     width: 50%;
     margin: auto;
