--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,13 @@
     grid-template-rows: 80px 545px 95px;
 }
 
+.section-banner {
+    grid-row-start: 1;
+    grid-row-end: 1;
+    z-index: 2;
+    display: contents;
+}
+
 .banner {
     z-index: 1;
     text-align: center;
@@ -90,7 +97,6 @@
     display: grid;
     grid-template-columns: 175px 72%;
     grid-template-rows: auto;
-    grid-gap: 15px;
     margin: unset !important;
 }
 
@@ -131,12 +137,14 @@
     margin: 0px -5px;
 }
 
-#banner-j1 {
+#banner-j1,
+#section-j1 {
     grid-column-start: 1;
     grid-column-end: 2;
 }
 
-#banner-j2 {
+#banner-j2,
+#section-j2 {
     grid-column-start: 2;
     grid-column-end: 4;
 }
@@ -175,6 +183,7 @@
 }
 
 #versus {
+    pointer-events: none;
     grid-row-start: 2;
     grid-row-end: 2;
     grid-column-start: 1;
@@ -185,6 +194,7 @@
 }
 
 #dom-wrap-haut {
+    pointer-events: none;
     grid-row-start: 1;
     grid-row-end: 4;
     grid-column-start: 1;
@@ -226,7 +236,7 @@
 #infos {
     display: grid;
     grid-template-columns: 100px 1fr 100px 1fr;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto;
     grid-gap: 10px;
     margin: auto;
     overflow: scroll auto;
