--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,45 @@
     src: url('../fonts/futura_bold.otf') format('truetype');
 }
 
+.dialog-j1 {
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+}
+
+.dialog-j2 {
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+}
+
+.window {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.dialog-j1,
+.dialog-j2,
+.window {
+    padding: 0 !important;
+    position: fixed !important;
+    z-index: 10;
+}
+
+.bordure-container {
+    border-style: solid;
+    border-width: 4px;
+    border-color: white;
+    padding: 0.5em;
+}
+
+.title-container {
+    display: table;
+    padding: 0 .5rem;
+    margin: -1.25rem 0 1rem !important;
+    background-color: #212529;
+}
 
 #dialog-char-j1,
 .dialog-j1 {
