add custom color background

--- a/css/main.css
+++ b/css/main.css
@@ -500,7 +500,8 @@
     justify-content: center;
 }
 
-.rows-color {
+.rows-color,
+.primary-color {
     display: flex;
     justify-content: space-evenly;
 }
