--- a/css/sprites.css
+++ b/css/sprites.css
@@ -133,6 +133,10 @@
     background-position: -320px 0px;
 }
 
+.pplus-stock_06_0 {
+    background-position: -384px 0px;
+}
+
 .pplus-stock_00_1 {
     background-position: 0px -64px;
 }
