[ULT] add Pyra/Mythra (XB2)

--- a/css/sprites.css
+++ b/css/sprites.css
@@ -59,6 +59,38 @@
     background-position: -523px -5px;
 }
 
+.ult-stock_00_1 {
+    background-position: -5px -79px;
+}
+
+.ult-stock_01_1 {
+    background-position: -79px -79px;
+}
+
+.ult-stock_02_1 {
+    background-position: -153px -79px;
+}
+
+.ult-stock_03_1 {
+    background-position: -227px -79px;
+}
+
+.ult-stock_04_1 {
+    background-position: -301px -79px;
+}
+
+.ult-stock_05_1 {
+    background-position: -375px -79px;
+}
+
+.ult-stock_06_1 {
+    background-position: -449px -79px;
+}
+
+.ult-stock_07_1 {
+    background-position: -523px -79px;
+}
+
 /* MELEE */
 .melee-stock_00_0 {
     background-position: -5px -5px;
